# satctl

./: .gitignore  404.html  LICENSE  Makefile  README.md  config.yml  index.html  pyproject.toml  sitemap.xml  test.py
.github/workflows/: docs.yml  test.yml
configs/: config.template.yml
resources/satpy/composites/: modis.yaml  msi.yaml  sar-c.yaml  sen2_msi.yaml  slstr.yaml  viirs.yaml
search/: search_index.json
src/satctl/: __init__.py  cli.py  composites.py  config.py  model.py  registry.py  utils.py
src/satctl/auth/: __init__.py  base.py  earthdata.py  eumetsat.py  odata.py  s3.py
src/satctl/downloaders/: __init__.py  base.py  earthdata.py  http.py  s3.py
src/satctl/progress/: __init__.py  base.py  rich.py  simple.py
src/satctl/progress/events/: __init__.py  bus.py
src/satctl/sources/: __init__.py  base.py  earthdata.py  earthdata_utils.py  modis.py  mtg.py  sentinel1.py  sentinel2.py  sentinel3.py  viirs.py
src/satctl/writers/: __init__.py  base.py  geotiff.py
tests/: conftest.py  test_auth.py  test_downloaders.py  test_modis.py  test_mtg.py  test_olci.py  test_s1.py  test_s2.py  test_sentinel2.py  test_slstr.py  test_sources.py  test_viirs.py
